# AriaNg-Desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: download-aria2.ps1  download-aria2.sh  download-ariang.ps1  download-ariang.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  constants.rs  lib.rs  main.rs  setup.rs  tray.rs
src-tauri/src/aria2/: config.rs  manager.rs  mod.rs  port.rs
src-tauri/src/ariang/: config.rs
