[package]
name = "ariang-app"
version = "1.0.0"
edition = "2021"
description = "A modern desktop download manager powered by Tauri, aria2, and AriaNg"

[lib]
name = "ariang_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["time", "sync"] }
tauri-plugin-notification = "2"
